Fix jumping of textbox in link-dialog. This happened when the link was being checked and the too large spinner image pushed the field down

--- a/modules/jquery.wikiEditor.dialogs.config.css
+++ b/modules/jquery.wikiEditor.dialogs.config.css
@@ -64,9 +64,6 @@ body.rtl .wikieditor-toolbar-table-dimension-fields .wikieditor-toolbar-field-wr
 	float: left;
 	line-height: 1.7em;
 }
-#wikieditor-toolbar-link-int-target-status-loading {
-	line-height: 1.7em;
-}
 #wikieditor-toolbar-link-int-target-status-exists,
 #wikieditor-toolbar-link-int-target-status-notexists,
 #wikieditor-toolbar-link-int-target-status-invalid,
